# ml_predictive_maintenance

./: README.md  main.py  pyproject.toml  requirements.txt
model/: lr_predictive_maintenance.joblib  rf_predictive_maintenance.joblib
notebook/: pdm_test.ipynb
results/: metrics.json  tests.json
src/: data_ingestion.py  feature_engineering.py  ml_training.py
